# unfurl-service

./: .CLAUDE.md  .dockerignore  .flake8  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT-OPTIMIZATION.md  Dockerfile  Dockerfile.base  Dockerfile.fast  Dockerfile.original  IMPLEMENTATION_SUMMARY.md  INSTAGRAM_SCRAPING_IMPROVEMENTS.md  LICENSE  Makefile  README.md  SLACK_CONFIGURATION_GUIDE.md  SLACK_VIDEO_SETUP.md  cdk.json  debug_brotli.py  fix_deploy.txt  install_deps.py  payload.b64  pyproject.toml  requirements-docker.txt  requirements-event-router.txt  response.json  setup-fast-deployment.sh  synth2.yaml  test-payload.json  test_brotli_lambda.py  test_deployment.py  test_event.json  test_instagram.py  test_playwright_fix.py
.github/workflows/: claude.yml  deploy.yml
cdk/: __init__.py  app.py  package-lock.json  package.json
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools-3.13.0.dist-info/: METADATA  RECORD
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/event_handler/: __init__.py  api_gateway.py  bedrock_agent.py  lambda_function_url.py  vpc_lattice.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/event_handler/openapi/: config.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/logging/: logger.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/shared/: functions.py  version.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/utilities/data_classes/: __init__.py  bedrock_agent_event.py  common.py  kafka_event.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/aws_lambda_powertools/utilities/parser/models/: __init__.py  kafka.py
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/boto3-1.38.27.dist-info/: RECORD
cdk-deploy-out/asset.0eff83ac8ded69afd1edf3cf25e2edc0bcb4b115d6a7787385c8e7007665d93f/python/botocore-1.38.27.dist-info/: RECORD
cdk-deploy-out/asset.c9bf509bad9bf42ac0d197b9da7039d8bccc69768b24452fe523a511df5d2603/: __init__.py
cdk/stacks/: __init__.py  unfurl_service_stack.py
docs/: LOGFIRE.md  SETUP.md  cloudwatch-queries.md  deployment.md  s3_persistence_spec.md  slack_configuration.md  url-normalization.md
scripts/: agent-setup.sh  bootstrap-deployment.sh  build_lambda_layer.sh  check-slack-config.py  check-slack-config.sh  deploy_video_proxy.py  migrate_to_container.py  run_video_tests.py  setup_environment.sh  test-event-router-deps.py  test-slack-auth.py  test-slack-events.py  test_docker_build.sh  update-slack-token.sh  validate_environment.py  validate_video_deployment.py
src/event_router/: handler.py
src/observability/: logging.py  metrics.py  trace_context.py
src/unfurl_processor/: __init__.py  asset_manager.py  entrypoint.py  handler.py  handler_async.py  handler_new.py  merge_utils.py  slack_formatter.py  url_utils.py  video_proxy.py
src/unfurl_processor/scrapers/: __init__.py  base.py  http_scraper.py  manager.py  oembed_scraper.py  playwright_scraper.py
tests/: test_async_handler.py  test_event_router.py  test_infrastructure_assets.py  test_unfurl_processor.py  test_url_utils.py
tests/unit/: test_asset_manager.py  test_slack_formatter.py  test_trace_context.py
